Contact us add form

--- a/contactus.html
+++ b/contactus.html
@@ -93,7 +93,67 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form>
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input class="form-control" type="text" id="firstName" placeholder="Enter Your First Name">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input class="form-control" type="text" id="lastName" placeholder="Enter Your Last Name">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">Contact Tel.</label>
+                        <div class="col-5 col-md-3">
+                            <input class="form-control" type="tel" id="areaCode" placeholder="Area Code">
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input class="form-control" type="tel" id="relNum" placeholder="Tel Nubmer">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input class="form-control" type="email" id="emaiId" placeholder="Enter Your Email ID">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2 ">
+                            <div class="form-heck">
+                                <input type="checkbox" class="form-check-inpute" id="approve">
+                                <label class="form-check-label"><strong>We Cotact you?</strong></label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea class="form-control" id="feedback" placeholder="Your Feeedback Matter."></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-md-10 offset-md-2">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div>
+
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
