--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
             </div>
         </div>
-        
+    </div> 
 
     <footer class="footer">
         <div class="container">
